CREATE TYPE task_status AS ENUM ('draft', 'ready_for_approval', 'approved');
CREATE CAST (CHARACTER VARYING as task_status) WITH INOUT AS IMPLICIT;

CREATE TABLE task_categories
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name               VARCHAR(100)                            NOT NULL,
    parent_id          BIGINT,
    ou_id              BIGINT                                  NOT NULL,
    created_by         VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    created_date       TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_modified_by   VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    last_modified_date TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT task_categories_pk PRIMARY KEY (id),
    CONSTRAINT task_categories_parent_fk FOREIGN KEY (parent_id) REFERENCES task_categories (id)
        ON DELETE CASCADE,
    CONSTRAINT task_categories_ou_fk FOREIGN KEY (ou_id) REFERENCES organizational_units (id)
        ON DELETE NO ACTION
);

CREATE TABLE task_groups
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name               VARCHAR(100)                            NOT NULL,
    description_de     TEXT                                    NOT NULL,
    description_en     TEXT                                    NOT NULL,
    task_group_type    VARCHAR(100)                            NOT NULL,
    status             task_status                             NOT NULL DEFAULT 'draft',
    ou_id              BIGINT                                  NOT NULL,
    created_by         VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    created_date       TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_modified_by   VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    last_modified_date TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    approved_by        VARCHAR(255),
    approved_date      TIMESTAMP WITH TIME ZONE,
    CONSTRAINT task_group_pk PRIMARY KEY (id),
    CONSTRAINT task_groups_ou_fk FOREIGN KEY (ou_id) REFERENCES organizational_units (id)
        ON DELETE NO ACTION
);

CREATE TABLE tasks
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    ou_id              BIGINT                                  NOT NULL,
    title              VARCHAR(100)                            NOT NULL,
    description_de     TEXT                                    NOT NULL,
    description_en     TEXT                                    NOT NULL,
    difficulty         SMALLINT                                NOT NULL DEFAULT 1,
    max_points         DECIMAL(10, 2)                          NOT NULL DEFAULT 1,
    task_type          VARCHAR(100)                            NOT NULL,
    status             task_status                             NOT NULL DEFAULT 'draft',
    task_group_id      BIGINT,
    created_by         VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    created_date       TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_modified_by   VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    last_modified_date TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    approved_by        VARCHAR(255),
    approved_date      TIMESTAMP WITH TIME ZONE,
    CONSTRAINT tasks_pk PRIMARY KEY (id),
    CONSTRAINT tasks_ou_fk FOREIGN KEY (ou_id) REFERENCES organizational_units (id)
        ON DELETE NO ACTION,
    CONSTRAINT tasks_group_fk FOREIGN KEY (task_group_id) REFERENCES task_groups (id)
        ON DELETE CASCADE,
    CONSTRAINT tasks_difficulty_ck CHECK (difficulty BETWEEN 1 and 4)
);

CREATE TABLE tasks_task_categories
(
    task_category_id BIGINT,
    task_id          BIGINT,
    CONSTRAINT tasks_task_categories_pk PRIMARY KEY (task_category_id, task_id),
    CONSTRAINT tasks_task_categories_t_fk FOREIGN KEY (task_id) REFERENCES tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT tasks_task_categories_c_fk FOREIGN KEY (task_category_id) REFERENCES task_categories (id)
        ON DELETE CASCADE
);

CREATE TABLE task_apps
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    task_type          VARCHAR(100)                            NOT NULL,
    url                VARCHAR(255)                            NOT NULL,
    api_key            VARCHAR(255),
    created_by         VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    created_date       TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_modified_by   VARCHAR(255)                            NOT NULL DEFAULT 'unknown',
    last_modified_date TIMESTAMP WITH TIME ZONE                NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT task_apps_pk PRIMARY KEY (id),
    CONSTRAINT task_apps_uq UNIQUE (task_type)
);
